Fix Windows dark mode + colored taskbar + light override

--- a/src/css/vars.scss
+++ b/src/css/vars.scss
@@ -67,7 +67,7 @@ body[data-transparent="true"] {
         --tray-background: var(--tray-background-transparent) !important;
     }
 }
-
+@media screen and (prefers-color-scheme: dark) {
 body[data-colored-taskbar="true"] {
     .window-base {
         --tray-background: var(--system-accent-dark) !important;
@@ -77,4 +77,5 @@ body[data-colored-taskbar="true"] {
             --tray-background: var(--system-accent-transparent) !important;
         }
     }
+}
 }
